import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);
const withRoot = code => ':root { --brand: rgb(var(--channels)); } ' + code;

test.snapshot({
	valid: [
		'a { color: rgb(var(--channels) / .5); }',
		':root { --brand: #123456; } a { color: rgb(var(--brand-rgb) / .5); }',
		withRoot('a { color: rgb(var(--channels)); }'),
		withRoot('a { color: rgb(from var(--brand) r g b / .5); }'),
		withRoot('a { color: hsl(var(--channels) / .5); }'),
		withRoot('a { color: rgb(var(--Channels) / .5); }'),
		withRoot('a { color: rgb(var(--channels, 1 2 3) / .5); }'),
		withRoot('a { color: rgb(var(--channels) 0 / .5); }'),
		withRoot('a { color: rgb(var(--channels) / none); }'),
		withRoot('a { color: rgb(/* keep */ var(--channels) / .5); }'),
		withRoot('a { color: rgb(var(--channels) / calc(.5 /* keep */ * 1)); }'),
		withRoot('a { color: var(--other, rgb(var(--channels) / .5)); }'),
		withRoot('a { --other: var(--fallback, rgb(var(--channels) / .5)); }'),
		withRoot('a { content: "rgb(var(--channels) / .5)"; background: url("rgb(var(--channels) / .5)"); }'),
		withRoot('a { background: --custom(rgb(var(--channels) / .5)); }'),
		withRoot('a { color: rgb(from rgb(var(--channels) / .5) r g b); }'),
		withRoot('a { color: color-mix(in srgb, var(--brand) 50%, transparent); }'),
		withRoot('@supports (color: rgb(var(--channels) / .5)) {}'),
		withRoot('@property --other { syntax: "<color>"; inherits: true; initial-value: rgb(var(--channels) / .5); }'),
		withRoot(':export { color: rgb(var(--channels) / .5); }'),
		withRoot(':import("./tokens.css") { color: rgb(var(--channels) / .5); }'),
		':export { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }',
		'.theme { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }',
		'@media screen { :root { --brand: rgb(var(--channels)); } } a { color: rgb(var(--channels) / .5); }',
		'@media screen { @layer theme { :root { --brand: rgb(var(--channels)); } } } a { color: rgb(var(--channels) / .5); }',
		'@supports (display: grid) { html { --brand: rgb(var(--channels)); } } a { color: rgb(var(--channels) / .5); }',
		'@scope (.theme) { :root { --brand: rgb(var(--channels)); } } a { color: rgb(var(--channels) / .5); }',
		':root.theme { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }',
		':root, html { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }',
		'.theme { :root { --brand: rgb(var(--channels)); } } a { color: rgb(var(--channels) / .5); }',
		'a { --brand: rgb(var(--channels)); @media screen { color: rgb(var(--channels) / .5); } }',
		withRoot('.theme { --brand: red; } a { color: rgb(var(--channels) / .5); }'),
		withRoot('@media screen { :root { --brand: red; } } a { color: rgb(var(--channels) / .5); }'),
		withRoot(':root { --brand: hsl(var(--channels)); } a { color: rgb(var(--channels) / .5); }'),
		withRoot(':root { --brand: rgb(var(--other)); } a { color: rgb(var(--channels) / .5); }'),
		withRoot(':root { --second: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }'),
		withRoot('a { --one: rgb(var(--channels)); --two: rgb(var(--channels)); color: rgb(var(--channels) / .5); }'),
		':root { --brand: rgb(var(--channels) / 1); } a { color: rgb(var(--channels) / .5); }',
		':root { --brand: rgb(var(--channels, 1 2 3)); } a { color: rgb(var(--channels) / .5); }',
		':root { --brand: rgb(var(--channels)) red; } a { color: rgb(var(--channels) / .5); }',
		':root { --brand: var(--other); } a { color: rgb(var(--channels) / .5); }',
		':root { --brand: rgb(var(--brand)); } a { color: rgb(var(--brand) / .5); }',
		':root { --brand: rgb(var(--channels)); --brand: rgb(var(--channels) / .5); }',
		':root { --brand: rgb(var(--channels)); --variant: ???; }',
		':root { --brand: red; --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }',
		withRoot(':root { --brand: red; --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }'),
		withRoot(':root { --second: rgb(var(--channels)); --third: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }'),
		withRoot('a { --variant: rgb(/* keep */ var(--channels) / .5); }'),
		withRoot('a { color: hwb(from rgb(var(--channels) / .5) h w b); }'),
		'@starting-style { :root { --brand: rgb(var(--channels)); } } a { color: rgb(var(--channels) / .5); }',
	],
	invalid: [
		withRoot('a { color: rgb(var(--channels) / .5); }'),
		withRoot('a { color: rgba(var(--channels), 50%); }'),
		withRoot('a { color: rgb(var(--channels), .5); }'),
		withRoot('a { color: rgba(var(--channels) / .5); }'),
		withRoot('a { color: RGB(VAR(--channels) / .5) !important; }'),
		withRoot('a { color: rgb(var(--channels) / var(--alpha, .25)); }'),
		withRoot('a { color: rgb(var(--channels) / calc(var(--alpha) * .5)); }'),
		withRoot('a { background: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }'),
		withRoot('a { box-shadow: 0 1px 2px rgb(var(--channels) / .1); }'),
		withRoot(':root { --variant: rgb(var(--channels) / .5); }'),
		withRoot('a { --shadow: 0 1px 2px rgb(var(--channels) / .1); }'),
		withRoot('a { color: light-dark(rgb(var(--channels) / .5), black); }'),
		withRoot('a { color: color-mix(in srgb, rgb(var(--channels) / .5), white); }'),
		withRoot('a { color: /* before */ rgb(var(--channels) / .5) /* after */; }'),
		withRoot('a {\r\n  color: rgb(var(--channels) / .5);\r\n}'),
		withRoot('a {\n\tcolor: rgb(\n\t\tvar(--channels) / calc(\n\t\t\tvar(--alpha) * .5\n\t\t)\n\t);\n}'),
		withRoot('a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(var(--channels) / .2); } }'),
		withRoot('@supports (display: grid) { @container (width > 1px) { @layer theme { @scope (.card) { a { color: rgb(var(--channels) / .5); } } } } }'),
		withRoot('@keyframes fade { from { color: rgb(var(--channels) / .5); } }'),
		'a { color: rgb(var(--channels) / .5); } :root { --brand: rgb(var(--channels)); }',
		'html { --brand: rgba(var(--channels)); } a { color: rgb(var(--channels) / .5); }',
		'@layer theme { @layer tokens { :root { --brand: rgb(var(--channels)); } } } a { color: rgb(var(--channels) / .5); }',
		'a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); }',
		'@media screen { a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }',
		'a { @media screen { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }',
		withRoot('a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); }'),
		withRoot(':root { --second: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); }'),
		withRoot(':root { --brand: RGBA(VAR(--channels)); } a { color: rgb(var(--channels) / .5); }'),
		':root { --Brand: rgb(var(--channels)); --brand: red; } a { color: rgb(var(--channels) / .5); }',
		':root { --brand: rgb(/* definition comment */ var(--channels)); } a { color: rgb(var(--channels) / .5); }',
		String.raw`:root { --brand\:primary: rgb(var(--brand\:channels)); } a { color: rgb(var(--brand\:channels) / .5); }`,
		':root { --brand: hsl(var(--channels)); } a { color: hsl(var(--channels) / .5); }',
		':root { --brand: hsla(var(--channels)); } a { color: hsla(var(--channels), 25%); }',
		'a { color: rgb(var(--channels) / .5); --brand: rgb(var(--channels)); }',
		':root { --brand: hsl(var(--channels)); --variant: hsl(var(--channels) / 50%); }',
		withRoot('a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }'),
		withRoot('a { --gradient: linear-gradient(rgb(/* keep */ var(--channels) / .2), rgba(var(--channels), .8)); }'),
		withRoot(':root { --second: rgb(var(--channels)); } .theme { --second: red; } a { color: rgb(var(--channels) / .5); }'),
		withRoot('a { @starting-style { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }'),
		':root { --brand: HSLA(VAR(--channels)) !important; } a { --variant: HSL(VAR(--channels) / clamp(.1, VAR(--alpha), .8)) !important; }',
	],
});

const multilineVariant = withRoot('a {\r\n  --label: "🟣";\r\n  --gradient: linear-gradient(\r\n    rgb(var(--channels) / calc(\r\n      var(--alpha, .25) * .5\r\n    )), black\r\n  );\r\n}');
const multilineReplacement = 'rgb(from var(--brand) r g b / calc(\r\n      var(--alpha, .25) * .5\r\n    ))';

test({
	valid: [],
	invalid: [{
		code: multilineVariant,
		errors: [{
			messageId: 'prefer-relative-colors',
			data: {replacement: multilineReplacement},
			suggestions: [{
				messageId: 'prefer-relative-colors/suggestion',
				data: {replacement: multilineReplacement},
				output: withRoot('a {\r\n  --label: "🟣";\r\n  --gradient: linear-gradient(\r\n    rgb(from var(--brand) r g b / calc(\r\n      var(--alpha, .25) * .5\r\n    )), black\r\n  );\r\n}'),
			}],
		}],
	}],
});

test({
	valid: [],
	invalid: [{
		code: withRoot('a { color: rgba(var(--channels), var(--alpha, .25)) !important; }'),
		errors: [{
			messageId: 'prefer-relative-colors',
			data: {replacement: 'rgb(from var(--brand) r g b / var(--alpha, .25))'},
			suggestions: [{
				messageId: 'prefer-relative-colors/suggestion',
				data: {replacement: 'rgb(from var(--brand) r g b / var(--alpha, .25))'},
				output: withRoot('a { color: rgb(from var(--brand) r g b / var(--alpha, .25)) !important; }'),
			}],
		}],
	}],
});
