exports[`invalid(1): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }

`;

exports[`invalid(1): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / .5); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(10): :root { --brand: rgb(var(--channels)); } :root { --variant: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } :root { --variant: rgb(var(--channels) / .5); }

`;

exports[`invalid(10): :root { --brand: rgb(var(--channels)); } :root { --variant: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } :root { --variant: rgb(var(--channels) / .5); }
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } :root { --variant: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(11): :root { --brand: rgb(var(--channels)); } a { --shadow: 0 1px 2px rgb(var(--channels) / .1); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { --shadow: 0 1px 2px rgb(var(--channels) / .1); }

`;

exports[`invalid(11): :root { --brand: rgb(var(--channels)); } a { --shadow: 0 1px 2px rgb(var(--channels) / .1); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { --shadow: 0 1px 2px rgb(var(--channels) / .1); }
    |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .1)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .1)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { --shadow: 0 1px 2px rgb(from var(--brand) r g b / .1); }

`;

exports[`invalid(12): :root { --brand: rgb(var(--channels)); } a { color: light-dark(rgb(var(--channels) / .5), black); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: light-dark(rgb(var(--channels) / .5), black); }

`;

exports[`invalid(12): :root { --brand: rgb(var(--channels)); } a { color: light-dark(rgb(var(--channels) / .5), black); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: light-dark(rgb(var(--channels) / .5), black); }
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: light-dark(rgb(from var(--brand) r g b / .5), black); }

`;

exports[`invalid(13): :root { --brand: rgb(var(--channels)); } a { color: color-mix(in srgb, rgb(var(--channels) / .5), white); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: color-mix(in srgb, rgb(var(--channels) / .5), white); }

`;

exports[`invalid(13): :root { --brand: rgb(var(--channels)); } a { color: color-mix(in srgb, rgb(var(--channels) / .5), white); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: color-mix(in srgb, rgb(var(--channels) / .5), white); }
    |                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: color-mix(in srgb, rgb(from var(--brand) r g b / .5), white); }

`;

exports[`invalid(14): :root { --brand: rgb(var(--channels)); } a { color: /* before */ rgb(var(--channels) / .5) /* after */; } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: /* before */ rgb(var(--channels) / .5) /* after */; }

`;

exports[`invalid(14): :root { --brand: rgb(var(--channels)); } a { color: /* before */ rgb(var(--channels) / .5) /* after */; } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: /* before */ rgb(var(--channels) / .5) /* after */; }
    |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: /* before */ rgb(from var(--brand) r g b / .5) /* after */; }

`;

exports[`invalid(15): :root { --brand: rgb(var(--channels)); } a {\r\n  color: rgb(var(--channels) / .5);\r\n} 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a {
  2 |   color: rgb(var(--channels) / .5);
  3 | }

`;

exports[`invalid(15): :root { --brand: rgb(var(--channels)); } a {\r\n  color: rgb(var(--channels) / .5);\r\n} 2`] = `

Message:
  1 | :root { --brand: rgb(var(--channels)); } a {
> 2 |   color: rgb(var(--channels) / .5);
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.
  3 | }

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a {
  2 |   color: rgb(from var(--brand) r g b / .5);
  3 | }

`;

exports[`invalid(16): :root { --brand: rgb(var(--channels)); } a {\n\tcolor: rgb(\n\t\tvar(--channels) / calc(\n\t\t\tvar(--alpha) * .5\n\t\t)\n\t);\n} 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a {
  2 | 	color: rgb(
  3 | 		var(--channels) / calc(
  4 | 			var(--alpha) * .5
  5 | 		)
  6 | 	);
  7 | }

`;

exports[`invalid(16): :root { --brand: rgb(var(--channels)); } a {\n\tcolor: rgb(\n\t\tvar(--channels) / calc(\n\t\t\tvar(--alpha) * .5\n\t\t)\n\t);\n} 2`] = `

Message:
  1 | :root { --brand: rgb(var(--channels)); } a {
> 2 | 	color: rgb(
    | 	       ^^^^
> 3 | 		var(--channels) / calc(
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 			var(--alpha) * .5
    | ^^^^^^^^^^^^^^^^^^^^
> 5 | 		)
    | ^^^
> 6 | 	);
    | ^^ Prefer \`rgb(from var(--brand) r g b / calc(
			var(--alpha) * .5
		))\` to derive this alpha variant from an existing color custom property.
  7 | }

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / calc(
			var(--alpha) * .5
		))\`.:
  1 | :root { --brand: rgb(var(--channels)); } a {
  2 | 	color: rgb(from var(--brand) r g b / calc(
  3 | 			var(--alpha) * .5
  4 | 		));
  5 | }

`;

exports[`invalid(17): :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(var(--channels) / .2); } } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(var(--channels) / .2); } }

`;

exports[`invalid(17): :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(var(--channels) / .2); } } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(var(--channels) / .2); } }
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(from var(--brand) r g b / .5); } @media screen { color: rgb(var(--channels) / .2); } }

`;

exports[`invalid(17): :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(var(--channels) / .2); } } 3`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(var(--channels) / .2); } }
    |                                                                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .2)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .2)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { & .b { color: rgb(var(--channels) / .5); } @media screen { color: rgb(from var(--brand) r g b / .2); } }

`;

exports[`invalid(18): :root { --brand: rgb(var(--channels)); } @supports (display: grid) { @container (width > 1px) { @layer theme { @scope (.card) { a { color: rgb(var(--channels) / .5); } } } } } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } @supports (display: grid) { @container (width > 1px) { @layer theme { @scope (.card) { a { color: rgb(var(--channels) / .5); } } } } }

`;

exports[`invalid(18): :root { --brand: rgb(var(--channels)); } @supports (display: grid) { @container (width > 1px) { @layer theme { @scope (.card) { a { color: rgb(var(--channels) / .5); } } } } } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } @supports (display: grid) { @container (width > 1px) { @layer theme { @scope (.card) { a { color: rgb(var(--channels) / .5); } } } } }
    |                                                                                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } @supports (display: grid) { @container (width > 1px) { @layer theme { @scope (.card) { a { color: rgb(from var(--brand) r g b / .5); } } } } }

`;

exports[`invalid(19): :root { --brand: rgb(var(--channels)); } @keyframes fade { from { color: rgb(var(--channels) / .5); } } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } @keyframes fade { from { color: rgb(var(--channels) / .5); } }

`;

exports[`invalid(19): :root { --brand: rgb(var(--channels)); } @keyframes fade { from { color: rgb(var(--channels) / .5); } } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } @keyframes fade { from { color: rgb(var(--channels) / .5); } }
    |                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } @keyframes fade { from { color: rgb(from var(--brand) r g b / .5); } }

`;

exports[`invalid(2): :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels), 50%); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels), 50%); }

`;

exports[`invalid(2): :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels), 50%); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels), 50%); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / 50%)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / 50%)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(from var(--brand) r g b / 50%); }

`;

exports[`invalid(20): a { color: rgb(var(--channels) / .5); } :root { --brand: rgb(var(--channels)); } 1`] = `

  1 | a { color: rgb(var(--channels) / .5); } :root { --brand: rgb(var(--channels)); }

`;

exports[`invalid(20): a { color: rgb(var(--channels) / .5); } :root { --brand: rgb(var(--channels)); } 2`] = `

Message:
> 1 | a { color: rgb(var(--channels) / .5); } :root { --brand: rgb(var(--channels)); }
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | a { color: rgb(from var(--brand) r g b / .5); } :root { --brand: rgb(var(--channels)); }

`;

exports[`invalid(21): html { --brand: rgba(var(--channels)); } a { color: rgb(var(--channels) / .5); } 1`] = `

  1 | html { --brand: rgba(var(--channels)); } a { color: rgb(var(--channels) / .5); }

`;

exports[`invalid(21): html { --brand: rgba(var(--channels)); } a { color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | html { --brand: rgba(var(--channels)); } a { color: rgb(var(--channels) / .5); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | html { --brand: rgba(var(--channels)); } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(22): @layer theme { @layer tokens { :root { --brand: rgb(var(--channels)); } } } a { color: rgb(var(--channels) / .5); } 1`] = `

  1 | @layer theme { @layer tokens { :root { --brand: rgb(var(--channels)); } } } a { color: rgb(var(--channels) / .5); }

`;

exports[`invalid(22): @layer theme { @layer tokens { :root { --brand: rgb(var(--channels)); } } } a { color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | @layer theme { @layer tokens { :root { --brand: rgb(var(--channels)); } } } a { color: rgb(var(--channels) / .5); }
    |                                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | @layer theme { @layer tokens { :root { --brand: rgb(var(--channels)); } } } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(23): a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } 1`] = `

  1 | a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); }

`;

exports[`invalid(23): a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); }
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | a { --brand: rgb(var(--channels)); color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(24): @media screen { a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } } 1`] = `

  1 | @media screen { a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }

`;

exports[`invalid(24): @media screen { a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } } 2`] = `

Message:
> 1 | @media screen { a { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | @media screen { a { --brand: rgb(var(--channels)); color: rgb(from var(--brand) r g b / .5); } }

`;

exports[`invalid(25): a { @media screen { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } } 1`] = `

  1 | a { @media screen { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }

`;

exports[`invalid(25): a { @media screen { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } } 2`] = `

Message:
> 1 | a { @media screen { --brand: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | a { @media screen { --brand: rgb(var(--channels)); color: rgb(from var(--brand) r g b / .5); } }

`;

exports[`invalid(26): :root { --brand: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); }

`;

exports[`invalid(26): :root { --brand: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); }
    |                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--local) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--local) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(from var(--local) r g b / .5); }

`;

exports[`invalid(27): :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); }

`;

exports[`invalid(27): :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); }
    |                                                                                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--local) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--local) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } a { --local: rgb(var(--channels)); color: rgb(from var(--local) r g b / .5); }

`;

exports[`invalid(28): :root { --brand: rgb(var(--channels)); } :root { --brand: RGBA(VAR(--channels)); } a { color: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } :root { --brand: RGBA(VAR(--channels)); } a { color: rgb(var(--channels) / .5); }

`;

exports[`invalid(28): :root { --brand: rgb(var(--channels)); } :root { --brand: RGBA(VAR(--channels)); } a { color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } :root { --brand: RGBA(VAR(--channels)); } a { color: rgb(var(--channels) / .5); }
    |                                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } :root { --brand: RGBA(VAR(--channels)); } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(29): :root { --Brand: rgb(var(--channels)); --brand: red; } a { color: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --Brand: rgb(var(--channels)); --brand: red; } a { color: rgb(var(--channels) / .5); }

`;

exports[`invalid(29): :root { --Brand: rgb(var(--channels)); --brand: red; } a { color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --Brand: rgb(var(--channels)); --brand: red; } a { color: rgb(var(--channels) / .5); }
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--Brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--Brand) r g b / .5)\`.:
  1 | :root { --Brand: rgb(var(--channels)); --brand: red; } a { color: rgb(from var(--Brand) r g b / .5); }

`;

exports[`invalid(3): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels), .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels), .5); }

`;

exports[`invalid(3): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels), .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels), .5); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(30): :root { --brand: rgb(/* definition comment */ var(--channels)); } a { color: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(/* definition comment */ var(--channels)); } a { color: rgb(var(--channels) / .5); }

`;

exports[`invalid(30): :root { --brand: rgb(/* definition comment */ var(--channels)); } a { color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(/* definition comment */ var(--channels)); } a { color: rgb(var(--channels) / .5); }
    |                                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(/* definition comment */ var(--channels)); } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(31): :root { --brand\\:primary: rgb(var(--brand\\:channels)); } a { color: rgb(var(--brand\\:channels) / .5); } 1`] = `

  1 | :root { --brand\\:primary: rgb(var(--brand\\:channels)); } a { color: rgb(var(--brand\\:channels) / .5); }

`;

exports[`invalid(31): :root { --brand\\:primary: rgb(var(--brand\\:channels)); } a { color: rgb(var(--brand\\:channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand\\:primary: rgb(var(--brand\\:channels)); } a { color: rgb(var(--brand\\:channels) / .5); }
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand\\:primary) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand\\:primary) r g b / .5)\`.:
  1 | :root { --brand\\:primary: rgb(var(--brand\\:channels)); } a { color: rgb(from var(--brand\\:primary) r g b / .5); }

`;

exports[`invalid(32): :root { --brand: hsl(var(--channels)); } a { color: hsl(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: hsl(var(--channels)); } a { color: hsl(var(--channels) / .5); }

`;

exports[`invalid(32): :root { --brand: hsl(var(--channels)); } a { color: hsl(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: hsl(var(--channels)); } a { color: hsl(var(--channels) / .5); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`hsl(from var(--brand) h s l / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`hsl(from var(--brand) h s l / .5)\`.:
  1 | :root { --brand: hsl(var(--channels)); } a { color: hsl(from var(--brand) h s l / .5); }

`;

exports[`invalid(33): :root { --brand: hsla(var(--channels)); } a { color: hsla(var(--channels), 25%); } 1`] = `

  1 | :root { --brand: hsla(var(--channels)); } a { color: hsla(var(--channels), 25%); }

`;

exports[`invalid(33): :root { --brand: hsla(var(--channels)); } a { color: hsla(var(--channels), 25%); } 2`] = `

Message:
> 1 | :root { --brand: hsla(var(--channels)); } a { color: hsla(var(--channels), 25%); }
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`hsl(from var(--brand) h s l / 25%)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`hsl(from var(--brand) h s l / 25%)\`.:
  1 | :root { --brand: hsla(var(--channels)); } a { color: hsl(from var(--brand) h s l / 25%); }

`;

exports[`invalid(34): a { color: rgb(var(--channels) / .5); --brand: rgb(var(--channels)); } 1`] = `

  1 | a { color: rgb(var(--channels) / .5); --brand: rgb(var(--channels)); }

`;

exports[`invalid(34): a { color: rgb(var(--channels) / .5); --brand: rgb(var(--channels)); } 2`] = `

Message:
> 1 | a { color: rgb(var(--channels) / .5); --brand: rgb(var(--channels)); }
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | a { color: rgb(from var(--brand) r g b / .5); --brand: rgb(var(--channels)); }

`;

exports[`invalid(35): :root { --brand: hsl(var(--channels)); --variant: hsl(var(--channels) / 50%); } 1`] = `

  1 | :root { --brand: hsl(var(--channels)); --variant: hsl(var(--channels) / 50%); }

`;

exports[`invalid(35): :root { --brand: hsl(var(--channels)); --variant: hsl(var(--channels) / 50%); } 2`] = `

Message:
> 1 | :root { --brand: hsl(var(--channels)); --variant: hsl(var(--channels) / 50%); }
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`hsl(from var(--brand) h s l / 50%)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`hsl(from var(--brand) h s l / 50%)\`.:
  1 | :root { --brand: hsl(var(--channels)); --variant: hsl(from var(--brand) h s l / 50%); }

`;

exports[`invalid(36): :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }

`;

exports[`invalid(36): :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }
    |                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .2)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .2)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(from var(--brand) r g b / .2), rgba(var(--channels), .8)); }

`;

exports[`invalid(36): :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); } 3`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }
    |                                                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .8)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .8)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(var(--channels) / .2), rgb(from var(--brand) r g b / .8)); }

`;

exports[`invalid(37): :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(/* keep */ var(--channels) / .2), rgba(var(--channels), .8)); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(/* keep */ var(--channels) / .2), rgba(var(--channels), .8)); }

`;

exports[`invalid(37): :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(/* keep */ var(--channels) / .2), rgba(var(--channels), .8)); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(/* keep */ var(--channels) / .2), rgba(var(--channels), .8)); }
    |                                                                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .8)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .8)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { --gradient: linear-gradient(rgb(/* keep */ var(--channels) / .2), rgb(from var(--brand) r g b / .8)); }

`;

exports[`invalid(38): :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } .theme { --second: red; } a { color: rgb(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } .theme { --second: red; } a { color: rgb(var(--channels) / .5); }

`;

exports[`invalid(38): :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } .theme { --second: red; } a { color: rgb(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } .theme { --second: red; } a { color: rgb(var(--channels) / .5); }
    |                                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } :root { --second: rgb(var(--channels)); } .theme { --second: red; } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(39): :root { --brand: rgb(var(--channels)); } a { @starting-style { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { @starting-style { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }

`;

exports[`invalid(39): :root { --brand: rgb(var(--channels)); } a { @starting-style { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { @starting-style { --local: rgb(var(--channels)); color: rgb(var(--channels) / .5); } }
    |                                                                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--local) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--local) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { @starting-style { --local: rgb(var(--channels)); color: rgb(from var(--local) r g b / .5); } }

`;

exports[`invalid(4): :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels) / .5); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels) / .5); }

`;

exports[`invalid(4): :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels) / .5); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: rgba(var(--channels) / .5); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(from var(--brand) r g b / .5); }

`;

exports[`invalid(40): :root { --brand: HSLA(VAR(--channels)) !important; } a { --variant: HSL(VAR(--channels) / clamp(.1, VAR(--alpha), .8)) !important; } 1`] = `

  1 | :root { --brand: HSLA(VAR(--channels)) !important; } a { --variant: HSL(VAR(--channels) / clamp(.1, VAR(--alpha), .8)) !important; }

`;

exports[`invalid(40): :root { --brand: HSLA(VAR(--channels)) !important; } a { --variant: HSL(VAR(--channels) / clamp(.1, VAR(--alpha), .8)) !important; } 2`] = `

Message:
> 1 | :root { --brand: HSLA(VAR(--channels)) !important; } a { --variant: HSL(VAR(--channels) / clamp(.1, VAR(--alpha), .8)) !important; }
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`hsl(from var(--brand) h s l / clamp(.1, VAR(--alpha), .8))\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`hsl(from var(--brand) h s l / clamp(.1, VAR(--alpha), .8))\`.:
  1 | :root { --brand: HSLA(VAR(--channels)) !important; } a { --variant: hsl(from var(--brand) h s l / clamp(.1, VAR(--alpha), .8)) !important; }

`;

exports[`invalid(5): :root { --brand: rgb(var(--channels)); } a { color: RGB(VAR(--channels) / .5) !important; } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: RGB(VAR(--channels) / .5) !important; }

`;

exports[`invalid(5): :root { --brand: rgb(var(--channels)); } a { color: RGB(VAR(--channels) / .5) !important; } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: RGB(VAR(--channels) / .5) !important; }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .5)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .5)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(from var(--brand) r g b / .5) !important; }

`;

exports[`invalid(6): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / var(--alpha, .25)); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / var(--alpha, .25)); }

`;

exports[`invalid(6): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / var(--alpha, .25)); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / var(--alpha, .25)); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / var(--alpha, .25))\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / var(--alpha, .25))\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(from var(--brand) r g b / var(--alpha, .25)); }

`;

exports[`invalid(7): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / calc(var(--alpha) * .5)); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / calc(var(--alpha) * .5)); }

`;

exports[`invalid(7): :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / calc(var(--alpha) * .5)); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(var(--channels) / calc(var(--alpha) * .5)); }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / calc(var(--alpha) * .5))\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / calc(var(--alpha) * .5))\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { color: rgb(from var(--brand) r g b / calc(var(--alpha) * .5)); }

`;

exports[`invalid(8): :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }

`;

exports[`invalid(8): :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }
    |                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .2)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .2)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(from var(--brand) r g b / .2), rgba(var(--channels), .8)); }

`;

exports[`invalid(8): :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); } 3`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(var(--channels) / .2), rgba(var(--channels), .8)); }
    |                                                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .8)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .8)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { background: linear-gradient(rgb(var(--channels) / .2), rgb(from var(--brand) r g b / .8)); }

`;

exports[`invalid(9): :root { --brand: rgb(var(--channels)); } a { box-shadow: 0 1px 2px rgb(var(--channels) / .1); } 1`] = `

  1 | :root { --brand: rgb(var(--channels)); } a { box-shadow: 0 1px 2px rgb(var(--channels) / .1); }

`;

exports[`invalid(9): :root { --brand: rgb(var(--channels)); } a { box-shadow: 0 1px 2px rgb(var(--channels) / .1); } 2`] = `

Message:
> 1 | :root { --brand: rgb(var(--channels)); } a { box-shadow: 0 1px 2px rgb(var(--channels) / .1); }
    |                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`rgb(from var(--brand) r g b / .1)\` to derive this alpha variant from an existing color custom property.

Suggestion 1/1: Replace with \`rgb(from var(--brand) r g b / .1)\`.:
  1 | :root { --brand: rgb(var(--channels)); } a { box-shadow: 0 1px 2px rgb(from var(--brand) r g b / .1); }

`;
